--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@fortawesome/react-fontawesome": "github:fortawesome/react-fontawesome",
     "daisyui": "^4.4.22",
     "next": "14.0.4",
+    "pocketbase": "^0.20.2",
     "react": "^18",
     "react-dom": "^18",
-    "swiper": "^11.0.5"
+    "swiper": "^11.0.5",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
